--- a/pages/globals.scss
+++ b/pages/globals.scss
@@ -7,4 +7,10 @@
 body {
   font-family: sans-serif;
   font-size: 62.5%;
+  background: rgb(161, 209, 194);
+  background: radial-gradient(
+    circle,
+    rgba(161, 209, 194, 1) 0%,
+    rgba(28, 162, 120, 1) 100%
+  );
 }
