--- a/components/searchBox.module.scss
+++ b/components/searchBox.module.scss
@@ -7,6 +7,7 @@
   & input {
     margin-right: 1.2rem;
     font-size: 1.5rem;
+    font-weight: bold;
     color: rgb(0, 0, 0, 0.7);
     padding: 0.5rem 1.5rem;
 
@@ -18,6 +19,7 @@
 
   & button {
     font-size: 1.5rem;
+    font-weight: bold;
     background-color: teal;
     color: white;
     padding: 0.5rem 1.5rem;
