--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -5,3 +5,11 @@
   font-size: 1.8rem;
   color: white;
 }
+
+.errorMsg {
+  font-size: 1.5rem;
+  color: red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
