--- a/components/DetailsCard.module.scss
+++ b/components/DetailsCard.module.scss
@@ -2,12 +2,17 @@
   background-color: teal;
   width: 80vw;
   margin: 5px auto;
+  margin-bottom: 1rem;
   font-size: 1.2rem;
   color: white;
 
   display: flex;
   justify-content: space-around;
   align-items: center;
+
+  @media screen and (max-width: 500px) {
+    width: 90vw;
+  }
 
   p {
     margin: 1rem;
