--- a/components/searchBox.module.scss
+++ b/components/searchBox.module.scss
@@ -4,12 +4,21 @@
   justify-content: center;
   align-items: center;
 
+  @media screen and (max-width: 500px) {
+    flex-direction: column;
+  }
+
   & input {
     margin-right: 1.2rem;
     font-size: 1.5rem;
     font-weight: bold;
     color: rgb(0, 0, 0, 0.7);
     padding: 0.5rem 1.5rem;
+
+    @media screen and (max-width: 500px) {
+      margin-right: 0;
+      margin-bottom: 0.5rem;
+    }
 
     &:focus {
       outline: none;
